--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
           height: 80px;
     background-color: #FFE3A2;
     box-shadow: 0px 0px 5px 0px #121212;
+    grid-area: header;
 }
 img.logo {
     width: 80px;
@@ -16,18 +17,18 @@ img.logo {
     padding: 10px 0px 0px 20px;
 }
   .topnav {
-      float: right;
+     float: right;
      padding: 40px 30px 10px 0px;
      font-weight: bold;
      font-family: Avenir Next;
   }
 
   a {
-      padding-right: 40px;
+      /* padding-right: 10px; */
       text-decoration: none;
       color: #0A2911;
-      /* font-family: Avenir Next;
-      font-weight: bold; */
+      font-family: Avenir Next;
+      
 
   }
   
@@ -62,14 +63,43 @@ img.logo {
     color: rgb(211, 210, 210);
   }
 
-  .sub-menu {
-      padding-top: 20px;
-      position: left;
-      /* display: inline;
-      margin-right: 10px; */
-      font-family: Avenir Next;
+  .active-title {
+    font-family: Avenir Next;
+    font-weight: bold;
   }
 
+ /* Style the list */
+ul.breadcrumb {
+  padding: 10px 16px;
+  list-style: none;
+  font-family: Avenir Next;
+
+}
+
+/* Display list items side by side */
+ul.breadcrumb li {
+  display: inline;
+  font-size: 18px;
+}
+
+/* Add a slash symbol (/) before/behind each list item */
+ul.breadcrumb li+li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
+}
+
+/* Add a color to all links inside the list */
+ul.breadcrumb li a {
+  color: black;
+  text-decoration: none;
+}
+
+/* Add a color on mouse-over */
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
 
  li {
     display: inline;
@@ -217,6 +247,7 @@ img.library-item {
     width: 100%;
 }
 
+
 .container-profile {
     padding: 20px;
     display: flex;
@@ -225,6 +256,10 @@ img.library-item {
     
 }
 
+
+.side-menu {
+    font-family: Avenir Next;
+}
 .userpicture {
 border-radius: 100px;
 width: 120px;
@@ -232,24 +267,43 @@ height: 120px;
 }
 
 .user-section {
-    margin-right: 10%;
-    margin-left: 0%;
+    margin-right: 5%;
+    margin-left: 10%;
+    font-family: Avenir Next;
     
 }
+
+
 
 .profile-section {
     margin-left: 10%;
     margin-right: 10%;
  }
 
+ .caregiver-section {
+ 
+    margin-left: 10%;
+    margin-right: 10%;
+ }
+
+
 .basic-info-section {
     margin-left: 10%;
-    margin-right: 10%;   
+    margin-right: 10%;
+    font-family: Avenir Next;
+   
+}
+.store-info-section {
+  margin-left: 10%;
+  margin-right: 10%;
+  font-family: Avenir Next;
 }
 
 .device-verification-section {
     margin-left: 10%;
     margin-right: 10%;
+    font-family: Avenir Next;
+
 }
 
 .container-orders {
@@ -264,7 +318,7 @@ height: 120px;
     width: 50px;
     height: 50px;
     background-color: #FFF2D4;
-    padding: 10px;
+    padding: 8px;
     margin: 0px 5px 5px 5px;
 }
 
@@ -318,34 +372,48 @@ height: 120px;
   }
   
 
- /* .bottom-container {
-    margin-left: 50px;
-    margin-right: 50px;
-    display: flex;
-    
-} */
-
-
- 
-
- /* hr {
-     margin-top: -5px;
-     padding-top: -5px;
-     width: 50%;
-     position: left;
- } */
-  /* .searchengine {
+    /* Style The Dropdown Button */
+.dropbtn {
+    background-color: transparent;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
   }
   
-  .mapouter {
-      height:500px;
-      width:100%;
-      margin: 0px;
-    }
-    .gmap_canvas {
-        overflow:hidden;
-        background:none!important;
-        height:500px;
-        width:100%;
-        margin: 0px;
-    } */
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    /* background-color: #f9f9f9; */
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 12px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
